Fix spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -124,14 +124,15 @@ dataset {
   color: #000;
 }
 
-.sidebar, .content {
-  background-color: #fff;
-}
-
-.site-header {
+.site-header, .site-footer {
   background: var(--color-bg-dark);
   border-bottom: 1px solid #2d3548;
   padding: 0;
+  height: 10%;
+}
+
+.site-footer {
+  height: 15%
 }
 
 .site-header .navbar {
@@ -293,4 +294,25 @@ dataset {
 .city-tracker-header-stats {
   font-size: 1rem;
   font-weight: normal;
+}
+
+thead th {
+  position: sticky;
+  top: 0;
+  background-color: var(--color-bg-page) !important;
+  border-bottom: none !important;
+}
+
+tbody {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.city-tracker-header {
+  background-color: var(--color-bg-card);
+  border-radius: var(--radius-md);
+  padding: var(--spacing-sm) var(--spacing-md);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
